--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title></title>
 </head>
 <body>
-<h1>Hello World</h1>
+  <h1>Hello World</h1>
+  <p>Checkout My awesome site</p>
+
 </body>
 </html>
