Add main picture and bootstrap

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" type="text/css" href="bootstrap.css">
 </head>
 <body>
-  <h1>Hello World</h1>
-  <p>Checkout My awesome site</p>
-
+  <img src="DBCsplash.jpg" class="img-responsive" >
 </body>
 </html>
