--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <title></title>
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <img src="DBCsplash.jpg" class="img-responsive" >
+
+  <img src="DBCsplash.jpg" class="main-picture">
 </body>
 </html>
