--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="JU3nWzWklecKplu8hhjhqW0i_4ACXRLlztAm3SIp6RA" />
   <title></title>
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
